{
    "name": "SubmarineControls",
    "maps": [
        {
            "name": "InGame",
            "id": "ffd18113-49ef-4af1-88ec-9ebb9c6a504f",
            "actions": [
                {
                    "name": "FirstPersonCamera",
                    "type": "Value",
                    "id": "6a58445e-0369-4753-877e-f1e163b20c36",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Grab",
                    "type": "Button",
                    "id": "aec3e12d-b0f3-4630-8c0b-33d925f81b9a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b5ad70dd-b5de-4df9-bf8a-585d1dd97f3d",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstPersonCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4801bc4-7e8b-4482-abe1-58faec05cb9e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Grab",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}